[package]
name = "swc-plugin-another-transform-imports"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
voca_rs = "1.14.0"
swc_ecmascript = { version = "0.186.0", features = ["visit"] }
swc_plugin = "0.88.2"
tracing = "0.1.36"

[dev-dependencies]
swc_ecma_transforms_testing = "0.104.0"
swc_ecma_parser = "0.116.0"
