[package]
name = "swc-plugin-another-transform-imports"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# debug = true
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = "symbols"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
voca_rs = "1.14.0"
tracing = "0.1.36"
swc_common = {version = "0.29.13", features = ["concurrent"]}
swc_core = {version = "0.40.46", features = [
  "plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_parser",
  "common",
]}

[dev-dependencies]
swc_core = { features = ["testing_transform"], version = "0.40.46" }